--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driverClassName = org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.properties.hibernate.jdbc.time_zone: UTC
+spring.jpa.properties.hibernate.show_sql: false
+spring.jpa.properties.hibernate.ddl-auto: update
+spring.jpa.open-in-view: false
+spring.jpa.generate-ddl=true
+
+spring.sql.init.platform: postgres
+spring.sql.init.mode: always
