--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,32 +1,20 @@
-
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Backend CI (Gradle + Spring Boot)
+name: CI for Spring Boot
 
 on:
   push:
     branches: [ main ]
-    pull_request:
-      branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-
-build:
-  runs-on: ubuntu-latest
-
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Set up JDK 17        #17 or23? need to ask
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-    - name: Grant execute permission for Gradle Wrapper
-      run: chmod +x gradlew
-
-    - name: Run backend tests
-      run: ./gradlew test
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 23
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '23'
+      - name: Run Tests
+        run: ./gradlew test
